--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
+war {
+    archiveFileName = 'WebsiteCarbonEmitterApplication.war'
+}
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
