--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.mail.username=97mayankjoshi@gmail.com
 spring.mail.password=pass110011Hacker@007
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
